# NLP-Test-Prioritization

./: .gitignore  README.md
docs/Paper/: library.bib  main.tex
docs/Paper/text/: 01_introduction.tex  02_related_work.tex  03_methodology.tex  04_evaluation.tex  05_discussion.tex  06_threats_to_validity.tex  07_conclusion.tex
docs/Presentation/: .~lock.NLP Test Selection.odp#  NLP Test Selection.odp
docs/notes/: progressfile.md
python_src/: pyproject.toml
python_src/notebooks/: import.ipynb  tests.ipynb
