[tool.poetry]
name = "python-src"
version = "0.1.0"
description = ""
authors = ["Marius Bosler <70728036+maribox@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_src"}]

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
