[tool.poetry]
name = "python-src"
version = "0.1.0"
description = ""
authors = ["Marius Bosler <70728036+maribox@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.1.2"
nltk = "^3.8.1"
# customize for your architecture + python version. See https://github.com/python-poetry/poetry/issues/6409 and https://github.com/pytorch/pytorch/issues/100974
# Can be changed as soon as Torch 2.1.1 is released (https://github.com/pytorch/pytorch/issues/100974#issuecomment-1781536001)
#torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.1.0%2Bcu118-cp311-cp311-linux_x86_64.whl"}
# should work now:
torch="^2.1.1"
transformers = "^4.35.0"
ipywidgets = "^8.1.1"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.1"
auto-gptq = "^0.5.1"
optimum = "^1.14.1"
sentence-transformers = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
